src/main/java/msa/lang/autocompute/cst/AutoComputeParser.java
// Generated from D:/Library/Repos/AutoCompute/grammar\AutoCompute.g4 by ANTLR 4.9.1
package msa.lang.autocompute.cst;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AutoComputeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, STRING_LITERAL=4, IN=5, OUT=6, ENTITY=7, GIVEN=8, 
		CONSTRAINTS=9, COMPUTE=10, DOT=11, DOTDOT=12, ASSIGN=13, LCURLY=14, RCURLY=15, 
		LBRACKET=16, RBRACKET=17, COMMA=18, COLON=19, BOOLEAN_LITERAL=20, TRUE=21, 
		FALSE=22, OPERATOR_ADD=23, OPERATOR_SUB=24, OPERATOR_MUL=25, OPERATOR_DIV=26, 
		OPERATOR_AND=27, OPERATOR_OR=28, OPERATOR_EQ=29, OPERATOR_NEQ=30, OPERATOR_GT=31, 
		OPERATOR_LT=32, OPERATOR_GTEQ=33, OPERATOR_LTEQ=34, OPERATOR_SCOPE=35, 
		OPERATOR_IN=36, OPERATOR_EXP=37, NUM=38, ID=39, COMMENT=40, LINE_COMMENT=41, 
		WS=42;
	public static final int
		RULE_compilationUnit = 0, RULE_entityDefinition = 1, RULE_entityBody = 2, 
		RULE_propertyDefinition = 3, RULE_inputDeclaration = 4, RULE_localVariableDefinition = 5, 
		RULE_outputDefinition = 6, RULE_given = 7, RULE_constraint = 8, RULE_constraintsDefinition = 9, 
		RULE_rangeExpression = 10, RULE_computeCall = 11, RULE_inputDefinition = 12, 
		RULE_reference = 13, RULE_expression = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "entityDefinition", "entityBody", "propertyDefinition", 
			"inputDeclaration", "localVariableDefinition", "outputDefinition", "given", 
			"constraint", "constraintsDefinition", "rangeExpression", "computeCall", 
			"inputDefinition", "reference", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'?'", null, null, null, null, null, null, null, 
			"'.'", "'..'", "':='", "'{'", "'}'", "'['", "']'", "','", "':'", null, 
			null, null, "'+'", "'-'", "'*'", "'/'", "'&&'", "'||'", "'=='", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'::'", "'<<'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "STRING_LITERAL", "IN", "OUT", "ENTITY", "GIVEN", 
			"CONSTRAINTS", "COMPUTE", "DOT", "DOTDOT", "ASSIGN", "LCURLY", "RCURLY", 
			"LBRACKET", "RBRACKET", "COMMA", "COLON", "BOOLEAN_LITERAL", "TRUE", 
			"FALSE", "OPERATOR_ADD", "OPERATOR_SUB", "OPERATOR_MUL", "OPERATOR_DIV", 
			"OPERATOR_AND", "OPERATOR_OR", "OPERATOR_EQ", "OPERATOR_NEQ", "OPERATOR_GT", 
			"OPERATOR_LT", "OPERATOR_GTEQ", "OPERATOR_LTEQ", "OPERATOR_SCOPE", "OPERATOR_IN", 
			"OPERATOR_EXP", "NUM", "ID", "COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AutoCompute.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AutoComputeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AutoComputeParser.EOF, 0); }
		public List<EntityDefinitionContext> entityDefinition() {
			return getRuleContexts(EntityDefinitionContext.class);
		}
		public EntityDefinitionContext entityDefinition(int i) {
			return getRuleContext(EntityDefinitionContext.class,i);
		}
		public List<ComputeCallContext> computeCall() {
			return getRuleContexts(ComputeCallContext.class);
		}
		public ComputeCallContext computeCall(int i) {
			return getRuleContext(ComputeCallContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					entityDefinition();
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMPUTE) {
				{
				{
				setState(36);
				computeCall();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENTITY) {
				{
				{
				setState(42);
				entityDefinition();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityDefinitionContext extends ParserRuleContext {
		public Token identifier;
		public TerminalNode ENTITY() { return getToken(AutoComputeParser.ENTITY, 0); }
		public TerminalNode LCURLY() { return getToken(AutoComputeParser.LCURLY, 0); }
		public EntityBodyContext entityBody() {
			return getRuleContext(EntityBodyContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(AutoComputeParser.RCURLY, 0); }
		public TerminalNode ID() { return getToken(AutoComputeParser.ID, 0); }
		public EntityDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterEntityDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitEntityDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitEntityDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityDefinitionContext entityDefinition() throws RecognitionException {
		EntityDefinitionContext _localctx = new EntityDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entityDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(ENTITY);
			setState(51);
			((EntityDefinitionContext)_localctx).identifier = match(ID);
			setState(52);
			match(LCURLY);
			setState(53);
			entityBody();
			setState(54);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityBodyContext extends ParserRuleContext {
		public List<PropertyDefinitionContext> propertyDefinition() {
			return getRuleContexts(PropertyDefinitionContext.class);
		}
		public PropertyDefinitionContext propertyDefinition(int i) {
			return getRuleContext(PropertyDefinitionContext.class,i);
		}
		public List<ConstraintsDefinitionContext> constraintsDefinition() {
			return getRuleContexts(ConstraintsDefinitionContext.class);
		}
		public ConstraintsDefinitionContext constraintsDefinition(int i) {
			return getRuleContext(ConstraintsDefinitionContext.class,i);
		}
		public List<InputDeclarationContext> inputDeclaration() {
			return getRuleContexts(InputDeclarationContext.class);
		}
		public InputDeclarationContext inputDeclaration(int i) {
			return getRuleContext(InputDeclarationContext.class,i);
		}
		public List<LocalVariableDefinitionContext> localVariableDefinition() {
			return getRuleContexts(LocalVariableDefinitionContext.class);
		}
		public LocalVariableDefinitionContext localVariableDefinition(int i) {
			return getRuleContext(LocalVariableDefinitionContext.class,i);
		}
		public List<EntityDefinitionContext> entityDefinition() {
			return getRuleContexts(EntityDefinitionContext.class);
		}
		public EntityDefinitionContext entityDefinition(int i) {
			return getRuleContext(EntityDefinitionContext.class,i);
		}
		public List<OutputDefinitionContext> outputDefinition() {
			return getRuleContexts(OutputDefinitionContext.class);
		}
		public OutputDefinitionContext outputDefinition(int i) {
			return getRuleContext(OutputDefinitionContext.class,i);
		}
		public EntityBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterEntityBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitEntityBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitEntityBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityBodyContext entityBody() throws RecognitionException {
		EntityBodyContext _localctx = new EntityBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entityBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(56);
					propertyDefinition();
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONSTRAINTS) {
				{
				{
				setState(62);
				constraintsDefinition();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IN) {
				{
				{
				setState(68);
				inputDeclaration();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(74);
				localVariableDefinition();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENTITY) {
				{
				{
				setState(80);
				entityDefinition();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OUT) {
				{
				{
				setState(86);
				outputDefinition();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyDefinitionContext extends ParserRuleContext {
		public Token identifier;
		public Token value;
		public TerminalNode COLON() { return getToken(AutoComputeParser.COLON, 0); }
		public TerminalNode DOT() { return getToken(AutoComputeParser.DOT, 0); }
		public TerminalNode ID() { return getToken(AutoComputeParser.ID, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(AutoComputeParser.STRING_LITERAL, 0); }
		public TerminalNode NUM() { return getToken(AutoComputeParser.NUM, 0); }
		public PropertyDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterPropertyDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitPropertyDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitPropertyDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyDefinitionContext propertyDefinition() throws RecognitionException {
		PropertyDefinitionContext _localctx = new PropertyDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_propertyDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((PropertyDefinitionContext)_localctx).identifier = match(ID);
			setState(93);
			match(COLON);
			setState(94);
			((PropertyDefinitionContext)_localctx).value = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==STRING_LITERAL || _la==NUM) ) {
				((PropertyDefinitionContext)_localctx).value = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(95);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputDeclarationContext extends ParserRuleContext {
		public Token identifier;
		public TerminalNode IN() { return getToken(AutoComputeParser.IN, 0); }
		public TerminalNode DOT() { return getToken(AutoComputeParser.DOT, 0); }
		public TerminalNode ID() { return getToken(AutoComputeParser.ID, 0); }
		public RangeExpressionContext rangeExpression() {
			return getRuleContext(RangeExpressionContext.class,0);
		}
		public InputDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterInputDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitInputDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitInputDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputDeclarationContext inputDeclaration() throws RecognitionException {
		InputDeclarationContext _localctx = new InputDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inputDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(IN);
			setState(98);
			((InputDeclarationContext)_localctx).identifier = match(ID);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(99);
				rangeExpression();
				}
			}

			setState(102);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalVariableDefinitionContext extends ParserRuleContext {
		public Token identifier;
		public TerminalNode ASSIGN() { return getToken(AutoComputeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AutoComputeParser.DOT, 0); }
		public TerminalNode ID() { return getToken(AutoComputeParser.ID, 0); }
		public GivenContext given() {
			return getRuleContext(GivenContext.class,0);
		}
		public LocalVariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localVariableDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterLocalVariableDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitLocalVariableDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitLocalVariableDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalVariableDefinitionContext localVariableDefinition() throws RecognitionException {
		LocalVariableDefinitionContext _localctx = new LocalVariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_localVariableDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			((LocalVariableDefinitionContext)_localctx).identifier = match(ID);
			setState(105);
			match(ASSIGN);
			setState(106);
			expression(0);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GIVEN) {
				{
				setState(107);
				given();
				}
			}

			setState(110);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputDefinitionContext extends ParserRuleContext {
		public Token identifier;
		public TerminalNode OUT() { return getToken(AutoComputeParser.OUT, 0); }
		public TerminalNode ASSIGN() { return getToken(AutoComputeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AutoComputeParser.DOT, 0); }
		public TerminalNode ID() { return getToken(AutoComputeParser.ID, 0); }
		public GivenContext given() {
			return getRuleContext(GivenContext.class,0);
		}
		public OutputDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterOutputDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitOutputDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitOutputDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputDefinitionContext outputDefinition() throws RecognitionException {
		OutputDefinitionContext _localctx = new OutputDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_outputDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(OUT);
			setState(113);
			((OutputDefinitionContext)_localctx).identifier = match(ID);
			setState(114);
			match(ASSIGN);
			setState(115);
			expression(0);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GIVEN) {
				{
				setState(116);
				given();
				}
			}

			setState(119);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GivenContext extends ParserRuleContext {
		public TerminalNode GIVEN() { return getToken(AutoComputeParser.GIVEN, 0); }
		public TerminalNode LCURLY() { return getToken(AutoComputeParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(AutoComputeParser.RCURLY, 0); }
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public GivenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_given; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterGiven(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitGiven(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitGiven(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GivenContext given() throws RecognitionException {
		GivenContext _localctx = new GivenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_given);
		int _la;
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(GIVEN);
				setState(122);
				match(LCURLY);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << BOOLEAN_LITERAL) | (1L << OPERATOR_ADD) | (1L << OPERATOR_SUB) | (1L << NUM) | (1L << ID))) != 0)) {
					{
					{
					setState(123);
					constraint();
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				match(RCURLY);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(GIVEN);
				setState(131);
				reference();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public Token rationale;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AutoComputeParser.DOT, 0); }
		public TerminalNode COMMA() { return getToken(AutoComputeParser.COMMA, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(AutoComputeParser.STRING_LITERAL, 0); }
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutoComputeListener ) ((AutoComputeListener)listener).exitConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutoComputeVisitor ) return ((AutoComputeVisitor<? extends T>)visitor).visitConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constraint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			expression(0);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(135);
				match(COMMA);
				setState(136);
				((ConstraintContext)_localctx).rationale = match(STRING_LITERAL);
				}
			}

			setState(139);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
